--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
+  "name": "HelloBookWorm",
+  "version": "0.1.0",
   "description": "A sample Node.js app using Express 4",
   "engines": {
     "node": "8.9.1"
   },
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "node test.js"
   },
   "dependencies": {
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/Srinithya-vutukuru/hellobookworm"
   },
   "keywords": [
     "node",
